# pad-extract

./: .gitignore  Cargo.toml  README.md
benches/: meta-bench.rs
src/: lib.rs
tests/: meta-test.rs
