[package]
name = "pad-extract"
version = "0.1.0"
edition = "2021"

[lib]
name = "pad"
path = "src/lib.rs"

[[bench]]
name = "meta-bench"
harness = false

[dependencies]
byteorder = "1.4.3"
encoding_rs = "0.8.31"
ice = { git = "https://github.com/Thell/ICE" }
quicklz = "0.3.1"
rayon = "1.5.2"
regex = "1.5.6"

[dev-dependencies]
bencher = "0.1.5"
lazy_static = "1.4.0"
mimalloc = { version = "*", default-features = false }

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 3
panic = "abort"
