[package]
name = "pad-extract"
version = "0.2.0"
edition = "2024"

[lib]
name = "pad"
path = "src/lib.rs"

[[bench]]
name = "meta-bench"
harness = false

[dependencies]
byteorder = "1.5.0"
encoding_rs = "0.8.35"
icefast = "2.0.1"
quicklz = "0.3.1"
rayon = "1.11.0"
regex = "1.12.3"

[dev-dependencies]
bencher = "0.1.5"
lazy_static = "1.5.0"
mimalloc = { version = "0.1.48", default-features = false }

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 3
panic = "abort"
